[project]
name = "workflowdominator"
version = "1.0.0"
description = "EU AI Act-compliant agent builder & dual-verification simulator"

[project.scripts]
app = "streamlit run app.py --server.port $PORT --server.headless true"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"